--- a/.gitignore
+++ b/.gitignore
@@ -74,3 +74,6 @@ yarn-debug.log*
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
+
+# Ignore startbootstrap-sb-admin-2-gh-pages folder, but not the zip file
+startbootstrap-sb-admin-2-gh-pages/
