feat: secrets bucket

--- a/terraform/staging/Dockerfile
+++ b/terraform/staging/Dockerfile
@@ -4,5 +4,8 @@ WORKDIR /workspace
 COPY ./setup.tf .
 RUN terraform init
 
+COPY ./secrets_bucket.tf .
+RUN terraform init
+
 # copy scripts for terraform to run
 COPY . .
