feat: terraform s3 backend

--- a/terraform/staging/Dockerfile
+++ b/terraform/staging/Dockerfile
@@ -1,6 +1,9 @@
 FROM hashicorp/terraform:light
 WORKDIR /workspace
 
+ARG AWS_ACCESS_KEY_ID
+ARG AWS_SECRET_ACCESS_KEY
+
 COPY ./setup.tf .
 RUN terraform init
 
