--- a/sample_credentials.yml
+++ b/sample_credentials.yml
@@ -1,10 +1,18 @@
 jwt:
-  secret: something
-aws:
-  access_key_id: something
-  secret_access_key: something
-  staging_bucket: something
-  production_bucket: something
+  secret: the-difference-jwt-secret
+
+staging:
+  aws:
+    access_key_id: something
+    secret_access_key: something
+    bucket: something
+    region: something
+
+    ses_username: something
+    ses_password: something
+
+  database:
+    password: something
 
 # Used as the base secret for all MessageVerifiers in Rails, including the one protecting cookies.
 secret_key_base: something
