--- a/config/database.yml
+++ b/config/database.yml
@@ -28,6 +28,12 @@ test:
   <<: *default
   database: rails6boilerplate_test
 
+staging: 
+  <<: *default
+  username: ubuntu
+  database: rails6boilerplate_staging
+  password: <%= Rails.application.credentials.dig(:staging, :database, :password) %>
+
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
 # ever seen by anyone, they now have access to your database.
