--- a/config/storage.yml
+++ b/config/storage.yml
@@ -9,17 +9,17 @@ local:
 # Use rails credentials:edit to set the AWS secrets (as aws:access_key_id|secret_access_key)
 amazon_staging:
   service: S3
-  access_key_id: <%= Rails.application.credentials.dig(:aws, :access_key_id) %>
-  secret_access_key: <%= Rails.application.credentials.dig(:aws, :secret_access_key) %>
-  region: us-east-1
-  bucket: <%= Rails.application.credentials.dig(:aws, :staging_bucket) %>
+  access_key_id: <%= Rails.application.credentials.dig(:staging, :aws, :access_key_id) %>
+  secret_access_key: <%= Rails.application.credentials.dig(:staging, :aws, :secret_access_key) %>
+  region: <%= Rails.application.credentials.dig(:staging, :aws, :region) %>
+  bucket: <%= Rails.application.credentials.dig(:staging, :aws, :bucket) %>
 
-amazon_production:
-  service: S3
-  access_key_id: <%= Rails.application.credentials.dig(:aws, :access_key_id) %>
-  secret_access_key: <%= Rails.application.credentials.dig(:aws, :secret_access_key) %>
-  region: us-east-1
-  bucket: <%= Rails.application.credentials.dig(:aws, :production_bucket) %>
+# amazon_production:
+#   service: S3
+#   access_key_id: <%= Rails.application.credentials.dig(:aws, :access_key_id) %>
+#   secret_access_key: <%= Rails.application.credentials.dig(:aws, :secret_access_key) %>
+#   region: us-east-1
+#   bucket: <%= Rails.application.credentials.dig(:aws, :production_bucket) %>
 
 # Remember not to checkin your GCS keyfile to a repository
 # google:
