--- a/terraform/templates/non_production/Dockerfile
+++ b/terraform/templates/non_production/Dockerfile
@@ -1,24 +1,24 @@
-FROM hashicorp/packer:light AS image_build
+FROM hashicorp/packer:light AS packer
 WORKDIR /workspace
-ARG AWS_SHARED_CREDENTIALS_FILE_BUILD_ARG
-ARG AWS_PROFILE_BUILD_ARG
-ENV AWS_SHARED_CREDENTIALS_FILE=$AWS_SHARED_CREDENTIALS_FILE_BUILD_ARG
-ENV AWS_PROFILE=$AWS_PROFILE_BUILD_ARG
-COPY ./awscredentials ./awscredentials
+ARG AWS_ACCESS_KEY_ID_BUILD_ARG
+ARG AWS_SECRET_ACCESS_KEY_BUILD_ARG
+ENV AWS_ACCESS_KEY_ID=$AWS_ACCESS_KEY_ID_BUILD_ARG
+ENV AWS_SECRET_ACCESS_KEY=$AWS_SECRET_ACCESS_KEY_BUILD_ARG
 COPY ./packer_scripts/ .
 COPY ./ec2.json ./ec2.json
 
-RUN packer build ec2.json
-
-FROM hashicorp/terraform:light AS infra_deploy
+FROM hashicorp/terraform:light AS terraform
 WORKDIR /workspace
 
-ARG AWS_SHARED_CREDENTIALS_FILE_BUILD_ARG
-ARG AWS_PROFILE_BUILD_ARG
-ENV AWS_SHARED_CREDENTIALS_FILE=$AWS_SHARED_CREDENTIALS_FILE_BUILD_ARG
-ENV AWS_PROFILE=$AWS_PROFILE_BUILD_ARG
-COPY ./awscredentials ./awscredentials
+ARG AWS_ACCESS_KEY_ID_BUILD_ARG
+ARG AWS_SECRET_ACCESS_KEY_BUILD_ARG
+ENV AWS_ACCESS_KEY_ID=$AWS_ACCESS_KEY_ID_BUILD_ARG
+ENV AWS_SECRET_ACCESS_KEY=$AWS_SECRET_ACCESS_KEY_BUILD_ARG
 COPY ./setup.tf ./setup.tf
+COPY ./variables.tf ./variables.tf
+COPY ./tf_files/ .
+COPY ./scripts ./scripts
+
 RUN terraform init
 
 # use volume mount to copy files
