chore: update sample credentials

--- a/sample_credentials.yml
+++ b/sample_credentials.yml
@@ -1,5 +1,5 @@
 jwt:
-  secret: the-difference-jwt-secret
+  secret: something
 
 staging:
   aws:
@@ -13,6 +13,22 @@ staging:
 
   database:
     password: something
+
+production:
+  aws:
+    access_key_id: something
+    secret_access_key: something
+    bucket: something
+    region: something
+
+    ses_username: something
+    ses_password: something
+
+  database:
+    host: something
+    username: something
+    password: something
+    db: something
 
 # Used as the base secret for all MessageVerifiers in Rails, including the one protecting cookies.
 secret_key_base: something
