--- a/config/storage.yml
+++ b/config/storage.yml
@@ -6,4 +6,9 @@ local:
   service: Disk
   root: <%= Rails.root.join("storage") %>
 
-# Use rails credentials:edit to set the AWS secrets (as aws:access_key_id|secret_access_key)
+amazon_production:
+  service: S3
+  access_key_id: <%= Rails.application.credentials.dig(:production, :aws, :access_key_id) %>
+  secret_access_key: <%= Rails.application.credentials.dig(:production, :aws, :secret_access_key) %>
+  region: <%= Rails.application.credentials.dig(:production, :aws, :region) %>
+  bucket: <%= Rails.application.credentials.dig(:production, :aws, :bucket) %>
