--- a/config/database.yml
+++ b/config/database.yml
@@ -27,8 +27,10 @@ development:
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  <<: *default
-  database: rails6boilerplate_test
+  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  timeout: 5000
+  adapter: sqlite3
+  database: db/test.sqlite3
 
 staging: 
   <<: *default
