feat: use DATABASE_URL to configure production database connection + add RAILS_MASTER_KEY env var

--- a/config/database.yml
+++ b/config/database.yml
@@ -58,7 +58,9 @@ staging:
 #     url: <%= ENV['DATABASE_URL'] %>
 #
 production:
-  <<: *default
-  database: rails6boilerplate_production
-  username: rails6boilerplate
-  password: <%= ENV['RAILS6BOILERPLATE_DATABASE_PASSWORD'] %>
+  adapter: mysql2
+  encoding: utf8mb4
+  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  variables:
+  sql_mode: TRADITIONAL
+  url: <%= ENV['DATABASE_URL'] %>
