--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "rails-erb-loader": "^5.5.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "turbolinks": "^5.2.0"
+    "turbolinks": "^5.2.0",
+    "webpack-md5-hash": "^0.0.6"
   },
   "version": "0.1.0",
   "devDependencies": {
