--- a/.ebextensions/02_nginx.config
+++ b/.ebextensions/02_nginx.config
@@ -2,6 +2,45 @@
 # https://medium.com/@marilu597/getting-to-know-and-love-aws-elastic-beanstalk-configuration-files-ebextensions-9a4502a26e3c
 
 files:
+  "/etc/nginx/nginx.conf":
+    mode: "000644"
+    owner: root
+    group: root
+    content: |
+      user nginx;
+      worker_processes auto;
+      error_log /var/log/nginx/error.log;
+      pid /var/run/nginx.pid;
+
+      # Load dynamic modules. See /usr/share/doc/nginx/README.dynamic.
+      include /usr/share/nginx/modules/*.conf;
+
+      events {
+          worker_connections 1024;
+      }
+
+      http {
+          log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
+                            '$status $body_bytes_sent "$http_referer" '
+                            '"$http_user_agent" "$http_x_forwarded_for"';
+
+          access_log  /var/log/nginx/access.log  main;
+
+          sendfile            on;
+          tcp_nopush          on;
+          tcp_nodelay         on;
+          keepalive_timeout   65;
+          types_hash_max_size 2048;
+
+          include             /etc/nginx/mime.types;
+          default_type        application/octet-stream;
+
+          # Load modular configuration files from the /etc/nginx/conf.d directory.
+          # See http://nginx.org/en/docs/ngx_core_module.html#include
+          # for more information.
+          include /etc/nginx/conf.d/*.conf;
+      }
+
   "/etc/nginx/conf.d/01_proxy.conf":
     mode: "000644"
     owner: root
@@ -22,8 +61,11 @@ files:
       }
 
       server {
-        listen 80;
-        server_name _ localhost; # need to listen to localhost for worker tier
+        listen       80 ;
+        listen       [::]:80 ;
+        server_name  localhost;
+
+        include /etc/nginx/default.d/*.conf;
 
         access_log  /var/log/nginx/access.log  main;
 
@@ -45,5 +87,7 @@ files:
       }
 
 commands:
-  01_reload_nginx:
+  01_remove_webapp_conf:
+    command: "sudo rm -f /etc/nginx/conf.d/webapp.conf"
+  02_reload_nginx:
     command: "sudo service nginx reload"
