chore: ignore Style/AndOr warning in controller as using "and" does not return properly in controller

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -7,3 +7,8 @@ Metrics/MethodLength:
 AllCops:
   Exclude:
     - 'app/views/**/*'
+# controller need to use `and return` to make sure
+# api do not look for template but just render json
+Style/AndOr:
+  Exclude:
+    - 'app/controllers/**/*'
