--- a/sample_credentials.yml
+++ b/sample_credentials.yml
@@ -1,19 +1,6 @@
 jwt:
   secret: something
 
-staging:
-  aws:
-    access_key_id: something
-    secret_access_key: something
-    bucket: something
-    region: something
-
-    ses_username: something
-    ses_password: something
-
-  database:
-    password: something
-
 production:
   aws:
     access_key_id: something
@@ -30,5 +17,20 @@ production:
     password: something
     db: something
 
-# Used as the base secret for all MessageVerifiers in Rails, including the one protecting cookies.
+staging:
+  aws:
+    access_key_id: something
+    secret_access_key: something
+    bucket: something
+    region: something
+
+    ses_username: something
+    ses_password: something
+
+  database:
+    host: something
+    username: something
+    password: something
+    db: something
+
 secret_key_base: something
