--- a/config/database.yml
+++ b/config/database.yml
@@ -13,14 +13,14 @@ default: &default
   adapter: mysql2
   encoding: utf8mb4
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  username: root
-  password: password
-  socket: /tmp/mysql.sock
   variables:
     sql_mode: TRADITIONAL
 
 development:
   <<: *default
+  username: root
+  password: password
+  socket: /tmp/mysql.sock
   database: rails6boilerplate_development
 
 # Warning: The database defined as "test" will be erased and
@@ -33,10 +33,7 @@ test:
   database: db/test.sqlite3
 
 staging: 
-  <<: *default
-  username: ubuntu
-  database: rails6boilerplate_staging
-  password: <%= Rails.application.credentials.dig(:staging, :database, :password) %>
+  url: <%= ENV['DATABASE_URL'] %>
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -58,8 +55,4 @@ staging:
 #     url: <%= ENV['DATABASE_URL'] %>
 #
 production:
-  adapter: mysql2
-  encoding: utf8mb4
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  sql_mode: TRADITIONAL
   url: <%= ENV['DATABASE_URL'] %>
