feat: ignore reproducible terraform files

--- a/.gitignore
+++ b/.gitignore
@@ -79,13 +79,4 @@ yarn-debug.log*
 startbootstrap-sb-admin-2-gh-pages/
 
 # Terraform
-terraform/*
-!terraform/templates
-!terraform/templates/non_production
-!terraform/templates/non_production/*
-terraform/templates/non_production/.DS_Store
-# Elastic Beanstalk Files
-.elasticbeanstalk/*
-!.elasticbeanstalk/config.yml
-!.elasticbeanstalk/*.cfg.yml
-!.elasticbeanstalk/*.global.yml
+terraform/*/.terraform
