--- a/.gitignore
+++ b/.gitignore
@@ -83,5 +83,6 @@ terraform/*/.terraform
 
 # Elastic Beanstalk Files
 .elasticbeanstalk/*
+!.elasticbeanstalk/config.yml
 !.elasticbeanstalk/*.cfg.yml
 !.elasticbeanstalk/*.global.yml
