feat: cloudwatch setup

--- a/sample_credentials.yml
+++ b/sample_credentials.yml
@@ -11,6 +11,9 @@ staging:
     ses_username: something
     ses_password: something
 
+    cloudwatch_access_key_id: something
+    cloudwatch_secret_access_key: something
+
   database:
     username: something
     db: something
