feat: use credentials file to hold action mailer configurations

--- a/sample_credentials.yml
+++ b/sample_credentials.yml
@@ -1,7 +1,16 @@
 jwt:
   secret: something
 
+development:
+  action_mailer_asset_host: 'http://localhost:3000'
+  action_mailer_host: 'localhost'
+  action_mailer_protocol: 'http'
+
 staging:
+  action_mailer_asset_host: something
+  action_mailer_host: something
+  action_mailer_protocol: something
+
   aws:
     access_key_id: something
     secret_access_key: something
@@ -18,5 +27,27 @@ staging:
     username: something
     db: something
     password: something
+
+production:
+  action_mailer_asset_host: something
+  action_mailer_host: something
+  action_mailer_protocol: something
+
+  aws:
+    access_key_id: something
+    secret_access_key: something
+    bucket: something
+    region: something
+
+    ses_username: something
+    ses_password: something
+
+    cloudwatch_access_key_id: something
+    cloudwatch_secret_access_key: something
+
+  database:
+    username: something
+    password: something
+    db: something
 
 secret_key_base: something
