feat: application homepage

--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "private": true,
   "dependencies": {
     "@babel/preset-react": "^7.0.0",
-    "@fortawesome/fontawesome-free": "^5.11.2",
+    "@fortawesome/fontawesome-free": "^5.12.1",
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "@rails/actioncable": "^6.0.0-alpha",
     "@rails/activestorage": "^6.0.0-alpha",
     "@rails/ujs": "^6.0.0-alpha",
     "@rails/webpacker": "^4.0.7",
+    "animate.css": "^3.7.2",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "bootstrap": "4.3.1",
     "chart.js": "^2.8.0",
@@ -17,13 +18,18 @@
     "flatpickr": "^4.6.2",
     "imports-loader": "^0.8.0",
     "jquery": "^3.4.1",
+    "jquery-hoverintent": "^1.10.1",
     "jquery.easing": "^1.4.1",
+    "owl.carousel": "^2.3.4",
     "popper.js": "^1.15.0",
     "prop-types": "^15.7.2",
     "rails-erb-loader": "^5.5.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "turbolinks": "^5.2.0"
+    "superfish": "^1.7.10",
+    "turbolinks": "^5.2.0",
+    "venobox": "^1.8.9",
+    "wowjs": "^1.1.3"
   },
   "version": "0.1.0",
   "devDependencies": {
