refactor: change how keys are organized in credentials

--- a/sample_credentials.yml
+++ b/sample_credentials.yml
@@ -2,14 +2,16 @@ jwt:
   secret: something
 
 development:
-  action_mailer_asset_host: 'http://localhost:3000'
-  action_mailer_host: 'localhost'
-  action_mailer_protocol: 'http'
+  action_mailer:
+    asset_host: 'http://localhost:3000'
+    host: 'localhost'
+    protocol: 'http'
 
 staging:
-  action_mailer_asset_host: something
-  action_mailer_host: something
-  action_mailer_protocol: something
+  action_mailer:
+    asset_host: something
+    host: something
+    protocol: something
 
   aws:
     access_key_id: something
@@ -20,8 +22,9 @@ staging:
     ses_username: something
     ses_password: something
 
-    cloudwatch_access_key_id: something
-    cloudwatch_secret_access_key: something
+    cloudwatch:
+      access_key_id: something
+      secret_access_key: something
 
   database:
     username: something
@@ -29,9 +32,10 @@ staging:
     password: something
 
 production:
-  action_mailer_asset_host: something
-  action_mailer_host: something
-  action_mailer_protocol: something
+  action_mailer:
+    asset_host: something
+    host: something
+    protocol: something
 
   aws:
     access_key_id: something
@@ -42,8 +46,9 @@ production:
     ses_username: something
     ses_password: something
 
-    cloudwatch_access_key_id: something
-    cloudwatch_secret_access_key: something
+    cloudwatch:
+      access_key_id: something
+      secret_access_key: something
 
   database:
     username: something
