chore: upgrade puma, bundler, ruby and switch back to using ruby-gemset for deployment on elastic beanstalk to work

--- a/.ebextensions/01_packages_installation.config
+++ b/.ebextensions/01_packages_installation.config
@@ -3,9 +3,14 @@
 # with reference to
 # https://gist.github.com/hanhdt/b55c07cf869f04195ada563fb1f01015
 
+option_settings:
+  - option_name: BUNDLE_DISABLE_SHARED_GEMS
+    value: "1"
+  - option_name: BUNDLE_PATH
+    value: "vendor/bundle"
+
 packages:
   yum:
-    epel-release: []
     git: []
 
 commands:
@@ -32,3 +37,10 @@ commands:
     cwd: /tmp
     test: '[ ! -f /usr/bin/yarn ] && echo "yarn not installed"'
     command: 'sudo yum -y install yarn'
+
+  05_epel_release:
+    command: 'sudo yum install -y https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm'
+    command: 'sudo yum-config-manager --enable epel'
+
+  06_imagemagick:
+    command: 'sudo yum install ImageMagick ImageMagick-devel'
