--- a/sample_credentials.yml
+++ b/sample_credentials.yml
@@ -1,3 +1,9 @@
+test:
+  action_mailer:
+    asset_host: 'http://localhost:3333'
+    host: 'localhost'
+    protocol: 'http'
+
 development:
   action_mailer:
     asset_host: 'http://localhost:3000'
