--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "imports-loader": "^0.8.0",
     "jquery": "^3.5.0",
     "jquery-hoverintent": "^1.10.1",
+    "jquery-ui-dist": "^1.12.1",
     "jquery.easing": "^1.4.1",
     "owl.carousel": "^2.3.4",
+    "plyr": "^3.6.2",
     "popper.js": "^1.15.0",
     "prop-types": "^15.7.2",
     "rails-erb-loader": "^5.5.2",
