feat: provision and destroy mina infrastructure

--- a/sample_credentials.yml
+++ b/sample_credentials.yml
@@ -19,7 +19,7 @@ staging:
   aws:
     access_key_id: something
     secret_access_key: something
-    bucket: something
+    bucket: project_name-staging-assets
     region: something
 
     ses_username: something
