feat: configure mailer options

--- a/sample_credentials.yml
+++ b/sample_credentials.yml
@@ -3,27 +3,33 @@ test:
     asset_host: 'http://localhost:3333'
     host: 'localhost'
     protocol: 'http'
+    default:
+      to: something@mailinator.com
+      from: something@mailinator.com
 
 development:
   action_mailer:
     asset_host: 'http://localhost:3000'
     host: 'localhost'
     protocol: 'http'
+    default:
+      to: something@mailinator.com
+      from: something@mailinator.com
 
 staging:
   action_mailer:
     asset_host: something
     host: something
     protocol: something
+    default:
+      to: something@mailinator.com
+      from: something@mailinator.com
 
   aws:
     access_key_id: something
     secret_access_key: something
     bucket: something
     region: something
-
-    ses_username: something
-    ses_password: something
 
     cloudwatch:
       access_key_id: something
@@ -39,6 +45,9 @@ production:
     asset_host: something
     host: something
     protocol: something
+    default:
+      to: something@mailinator.com
+      from: something@mailinator.com
 
   aws:
     access_key_id: something
@@ -46,8 +55,10 @@ production:
     bucket: something
     region: something
 
-    ses_username: something
-    ses_password: something
+    ses:
+      address: something
+      username: something
+      password: something
 
     cloudwatch:
       access_key_id: something
