--- a/.ebextensions/install-wkhtmltopdf.config
+++ b/.ebextensions/install-wkhtmltopdf.config
@@ -6,7 +6,8 @@ commands:
     command: yum -y install fontconfig libXrender libXext xorg-x11-fonts-Type1 xorg-x11-fonts-75dpi freetype libpng zlib libjpeg-turbo openssl icu
   2_install_wkhtmltopdf:
     # see: https://wkhtmltopdf.org/downloads.html for updates
-    command: wget https://downloads.wkhtmltopdf.org/0.12/0.12.4/wkhtmltox-0.12.4_linux-generic-amd64.tar.xz --dns-timeout=5 --connect-timeout=5
+    # use github as server https://github.com/wkhtmltopdf/wkhtmltopdf/issues/3518
+    command: wget https://github.com/wkhtmltopdf/wkhtmltopdf/releases/download/0.12.4/wkhtmltox-0.12.4_linux-generic-amd64.tar.xz --dns-timeout=5 --connect-timeout=5
     test: test ! -f .wkhtmltopdf
 
   3_install_wkhtmltopdf:
