--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "datatables.net": "^1.10.19",
     "datatables.net-bs4": "^1.10.19",
     "datatables.net-plugins": "^1.10.20",
+    "dropzone": "^5.7.2",
     "flatpickr": "^4.6.2",
     "imports-loader": "^0.8.0",
     "jquery": "^3.5.0",
