--- a/.platform/nginx/nginx.conf
+++ b/.platform/nginx/nginx.conf
@@ -26,39 +26,93 @@ http {
         default     "upgrade";
     }
 
+    ###################
+    # For SSL - START #
+    ###################
+    # server {
+    #     listen 80 default_server;
+
+    #     return 301 https://$host$request_uri;
+    # }
+
+    # server {
+    #     listen 80;
+
+    #     server_name yourdomain.com;
+
+    #     return 301 https://www.yourdomain.com$request_uri;
+    # }
+
+    # server {
+    #     listen 443 default_server ssl;
+    #     access_log var/log/nginx/access.log main;
+    #     server_name www.yourdomain.com;
+
+    #     include conf.d/elasticbeanstalk/healthd.conf;
+
+    #     ssl_certificate     /home/ec2-user/yourdomain.com.combined.crt;
+    #     ssl_certificate_key /home/ec2-user/yourdomain.com.key;
+    #     ssl_protocols       TLSv1 TLSv1.1 TLSv1.2;
+    #     ssl_ciphers         HIGH:!aNULL:!MD5;
+
+    #     client_header_timeout 60;
+    #     client_body_timeout   60;
+    #     keepalive_timeout     60;
+    #     gzip                  off;
+    #     gzip_comp_level       4;
+    #     gzip_types text/plain text/css application/json application/javascript application/x-javascript text/xml application/xml application/xml+rss text/javascript;
+
+    #     root /var/app/current/public;
+
+    #     location / {
+    #         proxy_pass http://my_app; # match the name of upstream directive by default in elastic beanstalk
+    #         proxy_set_header Host $host;
+    #         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    #         proxy_set_header X-Forwarded-Proto https;
+    #         proxy_redirect off;
+    #     }
+
+    #     location ~ ^/(assets|packs)/ {
+    #         gzip_static on;
+    #         gzip on;
+    #         expires max;
+    #         add_header Cache-Control public;
+    #     }
+    # }
+    #################
+    # For SSL - END #
+    #################
+
+    #######################
+    # For Non-SSL - START #
+    #######################
     server {
-        listen        80 default_server;
-        access_log    /var/log/nginx/access.log main;
+      listen 80;
+      listen [::]:80 ;
+      server_name localhost; # need to listen to localhost for worker tier
 
-        client_header_timeout 60;
-        client_body_timeout   60;
-        keepalive_timeout     60;
-        gzip                  off;
-        gzip_comp_level       4;
-        gzip_types text/plain text/css application/json application/javascript application/x-javascript text/xml application/xml application/xml+rss text/javascript;
+      include conf.d/elasticbeanstalk/healthd.conf;
 
-        # Include the Elastic Beanstalk generated locations
-        ## OVERRIDE
-        ## not including webapp.conf
-        include conf.d/elasticbeanstalk/healthd.conf;
+      access_log  /var/log/nginx/access.log  main;
 
-        ## OVERRIDE
-        ## replacing essential content from webapp.conf
-        server_name _ localhost; # need to listen to localhost for worker tier
+      root /var/app/current/public;
 
-        root /var/app/current/public;
+      location ~ ^/(assets|packs)/ {
+        gzip_static on;
+        gzip on;
+        expires max;
+        add_header Cache-Control public;
+      }
 
-        location / {
-            proxy_pass http://my_app; # match the name of upstream directive which is defined above
-            proxy_set_header Host $host;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        }
-
-        location ~ ^/(assets|packs)/ {
-            gzip_static on;
-            gzip on;
-            expires max;
-            add_header Cache-Control public;
-        }
+      location / {
+          proxy_pass http://my_app; # match the name of upstream directive by default in elastic beanstalk
+          proxy_set_header Host $host;
+          proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+          proxy_set_header X-Forwarded-Proto https;
+          proxy_redirect off;
+      }
     }
+    #####################
+    # For Non-SSL - END #
+    #####################
 }
